<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pidsel" />



    <Spinner
        android:id="@+id/pidSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Preview: listitem=@android:layout/simple_spinner_item -->
    </Spinner>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/kp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" />
        
        <EditText
            android:id="@+id/kp_min"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/kp_max"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
             android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

        <SeekBar
            android:id="@+id/seekBar_kp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ki" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ki"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.00"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ki_min"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.00"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ki_max"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
             android:imeOptions="actionDone"
            android:inputType="numberDecimal" />
        
        <SeekBar
            android:id="@+id/seekBar_ki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/kd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.00"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/kd_min"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.00"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/kd_max"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
             android:imeOptions="actionDone"
            android:inputType="numberDecimal" />
        
        <SeekBar
            android:id="@+id/seekBar_kd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.00" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip" />

    <EditText
        android:id="@+id/ipaddr"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/init"
            style="@style/btnStyleBeige"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_beige"
            android:text="@string/Init" />

        <Button
            android:id="@+id/doupdate"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:background="@drawable/button_selector_beige"
            android:text="@string/doup" />

        <Button
            android:id="@+id/start"
            style="@style/btnStyleGreen"
            android:layout_width="150dp"
            android:layout_height="96dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_green"
            android:text="@string/Start" />

        <Button
            android:id="@+id/stop"
            style="@style/btnStyleOrange"
            android:layout_width="150dp"
            android:layout_height="96dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_orange"
            android:text="@string/Stop" />

        <Button
            android:id="@+id/Exit"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_orange"
            android:text="@string/Shutdown" />

    </LinearLayout>

</LinearLayout>